--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="destination-container">
             <div class="destination" id="florida">
                 <h2>Florida</h2>
+                <p>sick dude!</p>
             </div>
 
             <div class="destination" id="paris">
